<resources>
    <string name="app_name">tmdb_project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connexion">Connexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="signup"><u>Créer un compte</u></string>
    <string name="signin"><u>Deja membre</u></string>
    <string name="inscription">Inscription</string>
    <string name="trends_title">TENDENCES ACTUELLES</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="choose_picture">Choisir une photo</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="confirm_new_password">Confirmation nouveau mot de passe</string>
    <string name="save">Sauvegarder</string>
    <string name="change_password">Changer de mot de passe</string>

    <!--Valeurs test pour la recyclerView de la page Trending-->
    <string-array name="recyclerView_title">
        <item>ITEM1</item>
        <item>ITEM2</item>
        <item>ITEM3</item>
        <item>ITEM4</item>
        <item>ITEM5</item>
        <item>ITEM6</item>
        <item>ITEM7</item>
        <item>ITEM8</item>
        <item>ITEM9</item>
        <item>ITEM10</item>
    </string-array>

    <string-array name="recyclerView_date_sortie">
        <item>ITEM1-DESC</item>
        <item>ITEM2-DESC</item>
        <item>ITEM3-DESC</item>
        <item>ITEM4-DESC</item>
        <item>ITEM5-DESC</item>
        <item>ITEM6-DESC</item>
        <item>ITEM7-DESC</item>
        <item>ITEM8-DESC</item>
        <item>ITEM9-DESC</item>
        <item>ITEM10-DESC</item>
    </string-array>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_trending">Trending</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_profil">Profil</string>
    <string name="trending_searchbar_hint">SEARCH</string>
</resources>