<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_trending">

    <fragment
        android:id="@+id/navigation_trending"
        android:name="com.example.tmdb_project.ui.trending.TrendingFragment"
        android:label="@string/title_trending"
        tools:layout="@layout/fragment_trending" />

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.example.tmdb_project.ui.watchlist.WatchingFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watching" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.tmdb_project.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>